[project]
name = "Auto_Bangumi"
version = "3.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiolimiter>=1.2.1",
  "alembic>=1.17.2",
  "bcrypt==4.2.0",
  "beautifulsoup4>=4.13.4",
  "bencode-py>=4.0.0",
  "dotenv>=0.9.9",
  "fastapi>=0.116.1",
  "httpx[http2,socks]>=0.28.1",
  "jinja2>=3.1.6",
  "packaging>=25.0",
  "passlib>=1.7.4",
  "pydantic-settings>=2.0.0",
  "python-jose>=3.5.0",
  "python-multipart>=0.0.20",
  "sqlmodel>=0.0.24",
  "sse-starlette>=3.0.2",
  "urllib3>=2.5.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.1.0"]
